third_party/move/move-compiler-v2/tests/uninit-use-checker/v1-borrows/eq_unassigned_local.exp

Diagnostics:
error: use of unassigned local `ref`
  ┌─ tests/uninit-use-checker/v1-borrows/eq_unassigned_local.move:5:9
  │
5 │         ref == &x;
  │         ^^^
